cabal-version:      2.4
name:               Unaligned 
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Unaligned, Codec.Compression.LZW

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      bytestring,
                      typenums,
                      bitstring,
                      containers,
                      mtl,
                      extra,
                      array

 
    hs-source-dirs:   src
    default-language: Haskell2010

executable lzw-profiling
    main-is:          LzwProfiling.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        Unaligned,
        bytestring,
        Unaligned
    ghc-options:
        -prof
        -auto-all
        "-with-rtsopts=-p"
    hs-source-dirs:   app
    default-language: Haskell2010

Test-suite unaligned-tests
  Hs-Source-Dirs:       tests
  Main-Is:              UnalignedTests.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5
  Ghc-Options:          -Wall

  Build-Depends:        
    hspec, 
    HUnit, 
    QuickCheck, 
    bytestring, 
    Unaligned, 
    bitstring
Test-suite lzw-tests
  Hs-Source-Dirs:       tests
  Main-Is:              LZWTests.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5
  Ghc-Options:          -Wall

  Build-Depends:        
    hspec, 
    HUnit, 
    QuickCheck, 
    bytestring, 
    Unaligned, 
    bitstring,
